Use legacy peer deps on Vercel build

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
   "build": {
-    "env": {},
+    "env": {
+      "NODE_ENV": "production"
+    },
     "npmFlags": "--legacy-peer-deps"
   }
 }
+
